--- a/IPB/Base.lproj/LaunchScreen.storyboard
+++ b/IPB/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16C32f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16D12b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -25,21 +25,19 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.50267206671779141" colorSpace="calibratedWhite"/>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoTransparent.png" translatesAutoresizingMaskIntoConstraints="NO" id="jC8-H9-oh0">
-                                <rect key="frame" x="67" y="269" width="240" height="128"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="7wn-2G-DHM"/>
-                                    <constraint firstAttribute="width" constant="240" id="nPu-Dc-3n5"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_5244.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="jC8-H9-oh0">
+                                <rect key="frame" x="0.0" y="-11" width="375" height="685"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.75686274509999996" green="0.75686274509999996" blue="0.75686274509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Zcf-5n-t6m" secondAttribute="trailing" id="1MY-SW-hiR"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Zcf-5n-t6m" secondAttribute="bottom" id="507-x9-OBH"/>
-                            <constraint firstItem="jC8-H9-oh0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="CQN-rB-ubs"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="jC8-H9-oh0" secondAttribute="bottom" constant="-7" id="9TN-01-rSW"/>
+                            <constraint firstAttribute="trailing" secondItem="jC8-H9-oh0" secondAttribute="trailing" id="GsX-Pf-ABc"/>
                             <constraint firstItem="Zcf-5n-t6m" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="ZOe-0g-4i9"/>
-                            <constraint firstItem="jC8-H9-oh0" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="lxP-lE-aUp"/>
+                            <constraint firstItem="jC8-H9-oh0" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="nDO-Em-vNj"/>
+                            <constraint firstItem="jC8-H9-oh0" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="-11" id="xgb-2U-Okt"/>
                             <constraint firstItem="Zcf-5n-t6m" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="xtk-t2-M9A"/>
                         </constraints>
                     </view>
@@ -50,6 +48,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logoTransparent.png" width="167" height="167"/>
+        <image name="IMG_5244.JPG" width="1280" height="720"/>
     </resources>
 </document>
